<resources>
    <string name="app_name">Chautari</string>
    <string name="image_contentDescription">image</string>
    <string name="lets_get_started_text">Let\'s Get Started</string>
    <string name="intro_text_discription">Collaborate and Plan Together Across Multiple Devices on Chautari\'s Minimalist Interface</string>
    <string name="sign_in">LOGIN</string>
    <string name="sign_up">REGISTER</string>

    <string name="sign_up_discription_text">Enter your details </string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="done">DONE</string>
    <string name="forgot_password">Forget Password</string>


    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>


    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>


    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Team</string>

    <string name="id">ID</string>
    <string name="none">NONE</string>
    <string name="multi_line_message">
    👋 Hello\n🌿 Welcome to Chautari.\n⏳ ....Loading....\n❌ Error\n⚠️ Erro\n⛔ Err\n🛑 Er\n🚨 E\n🚧 <b>This app is in maintenance</b> 🔧
</string>

    <string name="feature">Do you want use this feature...</string>

    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="member">Member</string>
    <string name="insert">Create</string>
    <string name="read">Read</string>

    <string name="delete">Delete</string>
    <string name="updateNote">Update</string>
    <string name="back"> > </string>


</resources>