<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NoteTaking"
    android:padding="@dimen/create_board_content_padding">

    <EditText
        android:id="@+id/editTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_below="@+id/editTextId"/>

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/member"
        android:layout_below="@+id/editTextName"/>

    <Button
        android:id="@+id/btn_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextAge"
        android:layout_marginTop="8dp"
        android:padding="@dimen/btn_paddingTop_botton"
        android:text="@string/insert"
        android:textColor="@color/black" />


    <Button
        android:id="@+id/btn_read"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextAge"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/btn_insert"
        android:padding="@dimen/btn_paddingTop_botton"
        android:text="@string/read"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextAge"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/btn_read"
        android:padding="@dimen/btn_paddingTop_botton"
        android:text="@string/updateNote"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextAge"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/btn_update"
        android:padding="@dimen/btn_paddingTop_botton"
        android:text="@string/delete"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_below="@+id/editTextAge"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/btn_delete"
        android:padding="@dimen/btn_paddingTop_botton"
        android:text="@string/back"
        android:textColor="@color/black" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btn_insert"
        android:layout_marginTop="@dimen/nav_content_margin_top"

        />


</RelativeLayout>