<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/my_profile_screen_content_padding"
    >
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/id"
        android:textColor="@color/black"
        android:textSize="@dimen/list_text_size"
        android:id="@+id/textId"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/list_text_size"
        android:id="@+id/textName"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/member"
        android:textColor="@color/black"
        android:textSize="@dimen/list_text_size"
        android:id="@+id/editTextAge"/>


</LinearLayout>